--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@
   --header_height: 104px;
   --bg_color: #fff7ec;
 }
+html, body {
+  font-family: Nunito, sans-serif !important;
+}
 
 .app {
   width: 100%;
@@ -113,6 +116,10 @@
 .user-form i:last-child {
   border-left: 1px solid #fff;
 }
+.list-user li a {
+  text-decoration: none;
+  color: #000;
+}
 .list-child {
   top: 100%;
   left: auto;
@@ -130,6 +137,14 @@
 .list-child li, .list-user li {
   width: 100%;
   cursor: pointer;
+}
+.link-user {
+  text-transform: uppercase;
+  font-family: Nunito, sans-serif !important;
+  font-weight: 400;
+}
+.link-user:hover, .list-user li:hover .link-user{
+  color: var(--text_color);
 }
 .list-child li:hover, .list-user li:hover {
   color: var(--text_color);
@@ -404,6 +419,9 @@ scrollbar-width: none;
   padding: 10px;
   border-radius: 20px;
   cursor: pointer;
+}
+.collection-item-img {
+  overflow: hidden;
 }
 .collection-item-img img {
   width: 100%;
