--- a/admin/admin.css
+++ b/admin/admin.css
@@ -80,7 +80,7 @@ a {
   color: #000;
 }
 .active {
-  color: red !important;
+  color: green !important;
 }
 
 table, td, th {
@@ -120,3 +120,12 @@ table {
   width: 80px;
   height: 40px;
 }
+
+/* .container {
+  position: relative;
+}
+.drop-down {
+  position: absolute;
+  background: #000;
+  color: red;
+} */
