--- a/admin/adminUpdate1.css
+++ b/admin/adminUpdate1.css
@@ -195,4 +195,9 @@ table {
 }
 .order-link{
   color: #000;
+  text-align: center;
+}
+.order-link:first-child {
+  padding-right: 5px;
+  border-right: 1px solid #000;
 }
