--- a/css/test1.css
+++ b/css/test1.css
@@ -420,6 +420,9 @@ scrollbar-width: none;
   border-radius: 20px;
   cursor: pointer;
 }
+.collection-item>a {
+  color: #000 !important;
+}
 .collection-item-img {
   overflow: hidden;
 }
@@ -436,10 +439,19 @@ scrollbar-width: none;
   float: left;
   margin: 5px 0;
 }
+.collection-item-btn a {
+  color: #000;
+  text-decoration: none;
+}
+.collection-item-btn:hover a {
+  color: #fff;
+}
 .collection-item-name {
   font-size: 16px;
   font-weight: 600;
   text-transform: uppercase;
+  display: block;
+  width: 100%;
 }
 .collection-item-price {
   font-size: 20px;
@@ -786,3 +798,16 @@ scrollbar-width: none;
   display: none;
 }
 
+.check {
+  margin-left: 10px;
+  color: red;
+  font-size: 14px;
+  margin-bottom: 5px;
+  display: none;
+}
+.check.active {
+  display: block;
+}
+.list-child-cat{
+  display: flex;
+}
